[package]
name = "proxyrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1"
pretty_env_logger = "0.4"
prometheus = { version = "0.12.0", default-features = false }
routerify = "2.2"
tokio = { version = "1", features = ["full"] }